oar (2.0.0-2) unstable; urgency=low

  * add full path to ssh in oarsh

 -- Capit Nicolas <capitn@localdomain>  Fri, 15 Dec 2006 20:07:34 +0100

oar (2.0.0-1) unstable; urgency=low

  * bug fix
  * versioning

 -- Capit Nicolas <capitn@localdomain>  Fri, 15 Dec 2006 17:33:06 +0100

oar (2.0.0-rc1) unstable; urgency=low

  * add a check in oar_scheduler.pm to avoid problems
  * rc1 release

 -- Capit Nicolas <capitn@localdomain>  Fri,  8 Dec 2006 16:43:44 +0100

oar (2.0.0-beta12) unstable; urgency=low

  * fix security bug in oarsh

 -- Capit Nicolas <capitn@localdomain>  Sun,  3 Dec 2006 20:08:29 +0100

oar (2.0.0-beta11) unstable; urgency=low

  * add cpuset script comment for virtualization feature
  * debug draw-gantt
  * add OAR_JOB_WALLTIME and OAR_JOB_WALLTIME_SECONDS environment variables
  * debug gantt sql query in oarstat
  * add a scheduler with a simple fairsharing algorithm

 -- Capit Nicolas <capitn@localdomain>  Fri,  1 Dec 2006 16:23:41 +0100

oar (2.0.0-beta10) unstable; urgency=low

  * security bug fix
  * add oarsh on the frontal
  * add patch for netbsd shell compliance
  * add "| ssh" in dependancies of debian packages (to be Sarge compliant)

 -- Capit Nicolas <capitn@localdomain>  Sun, 12 Nov 2006 05:16:38 +0100

oar (2.0.0-beta7) unstable; urgency=low

  * debug

 -- Capit Nicolas <capitn@localdomain>  Tue, 31 Oct 2006 16:38:36 +0100

oar (2.0.0-beta6) unstable; urgency=low

  * debug drawgantt packaging

 -- Capit Nicolas <capitn@localdomain>  Mon, 30 Oct 2006 19:13:42 +0100

oar (2.0.0-beta5) unstable; urgency=low

  * add cpuset banch management
  * bugfix
  * code enhancement (batch command line)
  * add --sql argument to several user commands (more flexible)

 -- Capit Nicolas <capitn@localdomain>  Mon, 30 Oct 2006 11:25:09 +0100

oar (2.0.0-beta4) unstable; urgency=low

  [ capitn ]
  * Add Suspend/Resume on jobs
  * --sql option in oarstat and oarnodes
  * debug
